keybind frontend page done and groundwork of single keybind page done

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Fazz Tools",
+  "name": "Fazz Tools World of Warcraft",
   "icons": [
     {
       "src": "favicon.ico",
